--- a/webinfo_133_backend/webinfo_133/src/main/resources/application.properties
+++ b/webinfo_133_backend/webinfo_133/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8081
 server.servlet.context-path=/webinfo
 spring.datasource.url=jdbc:mysql://localhost:3306/dbinfo_133?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
